--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,11 @@
       <h1>Welcome To Our Wyzebot Characters!</h1>
     </div>
     <br>
+    <div *ngIf="isBusy" class="text-center">
+      <div class="spinner-border" role="status">
+      </div>
+      <span class="sr-only">Loading...</span>
+    </div>
     <div class="d-flex flex-row-reverse bd-highlight">
       <button class="btn btn-primary" (click)="openModal()">Add</button>
     </div>
