--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,46 +1,1 @@
-<div class="container">
-
-  <div class="container mt-5">
-    <div class="logo">
-      <img src="https://robohash.org/Wyzit.png?set=set1" height="80px" />
-      <h1>Welcome To Our Wyzebot Characters!</h1>
-    </div>
-    <br>
-    <div *ngIf="isBusy" class="text-center">
-      <div class="spinner-border" role="status">
-      </div>
-      <span class="sr-only">Loading...</span>
-    </div>
-    <div class="d-flex flex-row-reverse bd-highlight">
-      <button class="btn btn-primary" (click)="openModal()">Add</button>
-    </div>
-    <br>
-    <table class="table table-bordered">
-      <thead>
-        <tr>
-          <th scope="col">#Id</th>
-          <th scope="col">Name</th>
-          <th scope="col">Action</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let character of characters">
-          <td>{{ character._id }}</td>
-          <td>{{ character.name }}</td>
-          <td>
-            <!-- <span class="edit btn-danger btn-sm btn" (click)="deleteCharacter(character._id)"
-              >Delete</span
-            > -->
-            &nbsp;
-            <span
-              class="edit btn-success btn-sm btn"
-              routerLink="/edit/{{ character._id }}"
-              >Edit</span
-            >
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-
-</div>
+<router-outlet></router-outlet>
